# clipboard_sync_client

./: README.md  main.py  pyproject.toml  settings.py
utils/: clipboard_sync_client.py  httpx_client.py  sync.py
