[tool.poetry]
name = "clipboard-client"
version = "0.1.0"
description = ""
authors = ["captain_dog <nagelsehr@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyperclip = "^1.9.0"
loguru = "^0.7.2"
httpx = "^0.27.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
